--- a/client/src/app/sell/sell.component.html
+++ b/client/src/app/sell/sell.component.html
@@ -26,7 +26,7 @@
 
       <ng-container matColumnDef="statusProduct">
         <th mat-header-cell *matHeaderCellDef> StatusProduct </th>
-        <td mat-cell *matCellDef="let element"> {{element.statusProduct}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.status.statusProduct}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
