--- a/client/src/app/menucustomer/menucustomer.component.html
+++ b/client/src/app/menucustomer/menucustomer.component.html
@@ -1,19 +1,13 @@
+<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 <mat-toolbar class="toolbar">
   <mat-toolbar-row>
-  </mat-toolbar-row>
-  <mat-toolbar-row>
+
     <a class="menu-list">Renting and Dressing System</a>
-    <span class="example-spacer"></span>
-    <div class="button-row">
-      <button mat-flat-button color="primary" routerLink="/makeup">MAKE UP AND HAIR STYLE</button>
-      <button mat-flat-button color="primary" routerLink="/renting">RENTING</button>
-      <button mat-flat-button color="primary" routerLink="/selling">SELLING</button>
-      <button mat-flat-button color="primary" routerLink="/home">LOG OUT</button>
-    </div>
+  <span class="example-spacer"></span>
+  <button mat-button routerLink="/makeup">Make up and Hair style</button>
+  <button mat-button routerLink="/renting">Renting</button>
+  <button mat-button routerLink="/selling">Selling</button>
+  <button mat-button routerLink="/home">LOG OUT</button>
+
   </mat-toolbar-row>
 </mat-toolbar>
-
-<div class="panel">
-  <div class="panel1">
-    <div class="button-row">
-      <mat-tab-group>
